--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #202030;
 }
 
 code {
@@ -12,18 +13,42 @@ code {
     monospace;
 }
 
+.center-frame {
+  margin: 0 auto;
+  text-align: center;
+}
 
 #api-version #stack-label {
   font-size: 14pt;
   color: #000000;
 }
 
-#api-version::before{
-  content: 'API Version: ';
-  color: #a02020;
+#welcome {
+  color: #c0c0c0;
+  font-size: 32px;
 }
 
-#stack-label::before {
-  content: "Branch: ";
-  color: #20a020;
+.version_label {
+  font-size: 12pt;
+  color: #a0a0d0;
+  font-weight: bold;
+  padding: 5px;
+  display: block;
+}
+
+.version_info_label {
+  color: #a0a0a0;
+  font-weight: normal;
+  margin-right: 20px;
+}
+
+.version-box {
+  background-color: #303040;
+  padding: 5px;
+  margin: 0 auto;
+  width: fit-content;
+}
+
+#footer-separator {
+  color: #a0a0a0;
 }
