--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,15 @@ code {
 #footer-separator {
   color: #a0a0a0;
 }
+
+.github-logo-svg {
+  -webkit-filter: invert(100%);
+  filter: invert(100%);
+  margin-right: 10px;
+}
+
+.github-logo-svg:hover {
+  -webkit-filter: invert(65%);
+  filter: invert(65%);
+  margin-right: 10px;
+}
